--- a/templates/index.html
+++ b/templates/index.html
@@ -31,24 +31,36 @@
           </div>
         </div>
     </div>
-    <!-- Featured Image-->
-    <div class="row" id="mars-featured-image">
-            <div class="col-md-8">         
-              <h2>Featured Mars Image</h2>          
-              <img src="{{ mars.featured_image }}" class="img-responsive" alt="Responsive image"/>         
-            </div>         
-          </div>
     <!-- Mars Featured Image -->
-    <div class="row" id="mars-featured-image">
-        <div class="col-md-8">
-            <h2>Featured Mars Image</h2>
-            <img src="{{ mars.featured_image }}" class="img-responsive" alt="Responsive image">
-        </div>
-        <!-- Mars Info -->
-        <div class="col-md-4">
-        </div>
+  <div class="row" id="mars-featured-image">
+      <div class="col-md-8">
+          <h2>Featured Mars Image</h2>
+          <img src="{{ mars.featured_image}}" class="img-responsive" alt="Responsive image"/>
+      </div>
+      <!-- Mars Facts -->
+      <div class="col-md-4">
+        <h4>Mars Facts</h4>
+        {{mars.facts | safe}}
+      </div>
     </div>
-</body>
+  </div>
+<!-- Section for Mars Hemispheres -->
+  <div class="row" id="mars-hemispheres">
+    <div class="page-header">
+      <h2 class="text-center">Mars Hemispheres</h2>
+    </div>
+      {% for hemisphere in mars.hemispheres %}
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+            <div class="caption">
+              <h3>{{hemisphere.title}}</h3>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </body>
 </html>
 
 
